updating argo version and project configuration

--- a/ansible/roles/argocd/templates/argo-instance.yml.j2
+++ b/ansible/roles/argocd/templates/argo-instance.yml.j2
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1beta1
 kind: ArgoCD
 metadata:
-  name: openshift-gitops
+  name: openshift-gitops-cluster
   namespace: openshift-gitops
 spec:
   server:
